<resources>
    <string name="app_name">All Might Pedia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">All Might Gallery</string>
    <string name="menu_slideshow">All Might Moments</string>
    <string name="menu_Quiz">All Might Quiz</string>

    <string name="AllMight_description">Toshinori Yagi (八や木ぎ俊とし典のり Yagi Toshinori?), more commonly known by his hero name, All Might (オールマイト Ōru Maito?), is the tritagonist of My Hero Academia, and the arc protagonist of the Hideout Raid Arc. All Might is the former No. 1 Pro Hero who bore the title of the world\'s Symbol of Peace (平和の象徴 Heiwa no Shōchō?). He teaches Foundational Hero Studies at U.A. High School.All Might was the eighth holder of the One For All Quirk after receiving it from Nana Shimura. He has since passed the torch to Izuku Midoriya, whom he is training to be his successor. After using up all the embers of One For All to defeat All For One, All Might retired and ended his era as the world\'s greatest hero.</string>
    <string name="please_answer">Choose an answer before continuing</string>
    <string name="all_might_soundpad">All Might SoundPad</string>
    <string name="menu_sound">All Might SoundPad</string>
    <string name="quiz_full">A Full Mark! That\'s Impressive! What An Amazing work, good job!</string>
    <string name="quiz_good">You did well! Stand Proud!</string>
    <string name="quiz_alright">You did Alright, but I expect more from my successor, you can try again anytime!</string>
    <string name="quiz_fail">You failed the exam, but no worries! you could always try again! go beyond, Plus Ultra!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_in_sign_up">SignInSignUpActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="accessStorage">Access to storage is required to choose an image</string>
    <string name="signOut">Sign Out</string>
    <string name="sign_in_required_to_favourite">You Need to be signed In to be able to favourite an Image</string>
    <string name="sign_in_required_to_show_favourites">You Need to be signed In to be able to show your favourite Images</string>
    <string name="live_chat">Live Chat</string>
    <string name="menu_chat">Chat</string>
    <string name="sign_in_required_to_send_messages">You need to be signed in to be able to send messages</string>
    <string name="sign_in_required">Sign In Required</string>
    <string name="fanArtTab">Fans Art</string>
    <string name="sign_in_required_to_upload_posts">you need to be signed in to be able to post a fan art</string>
    <string name="username">\@shalia.kwt@outlook.com</string>
    <string name="profile">Profile</string>
    <string name="main">Main</string>
    <string name="aboutme">Hi, i am Mohammed, the creator of this app. I am a beginner programmer learning android development.
i made this app to improve my coding skills and not out of weebary for all might :). (though i am still a weeb).
if you liked my app and have suggestions for it let me know.</string>
    <string name="delete_account">Delete Your Account</string>
    <string name="sign_in_required_to_interact_with_art">You need to be signed in to interact with this post</string>
    <string name="copy_strike">ATTENTION: I do not own anything in this app including the audio and picture. The credits go to the respective owners. This is purely a fan-made and will not be used for profit or illegal sharing!</string>

    <integer-array name="img_id_arr">
        <item>@drawable/tab_selector</item>
        <item>@drawable/tab_selector</item>
    </integer-array>
</resources>