<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/profile">
            <menu>
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/profile" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/main">

            <menu>

                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_menu_home"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_gallery" />
                <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_slideshow" />
                <item
                    android:id="@+id/nav_quiz"
                    android:icon="@drawable/ic_menu_quiz"
                    android:title="@string/menu_Quiz" />
                <item
                    android:id="@+id/nav_sound"
                    android:icon="@drawable/ic_mic"
                    android:title="@string/all_might_soundpad" />

                <item
                    android:id="@+id/nav_chat"
                    android:icon="@drawable/ic_chat"
                    android:title="@string/live_chat"/>

                <item
                    android:id="@+id/nav_art"
                    android:title="@string/fanArtTab"
                    android:icon="@drawable/ic_fan_art"/>

            </menu>

        </item>
    </group>


    <group android:checkableBehavior="single">
<item
    android:id="@+id/item_title_sign_out"
    android:title="@string/signOut">
    <menu>

        <item
            android:id="@+id/nav_signOut"
            android:icon="@drawable/ic_logout"
            android:title="@string/signOut" />

    </menu>
</item>
    </group>

</menu>